@@ -1,3 +1,7 @@
+* Display the number of selected records
+* Humanize the count result
+* Add limit to search_count
+
 Version 6.0.4 - 2021-08-05
 * Bug fixes (see mercurial logs for details)
 
